[package]
name = "serverless_capital"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
deno_ast = { version = "0.42.1", features = ["transpiling"] }
deno_core = "0.311.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = "1.40.0"
